--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Jonas Reimer Christensen</title>
 	
       <!--Stylesheet for website-->
-      <link href="D:\Hjemmesider\JonasHjemmeside\style.css" type="text/css" rel="stylesheet">
+      <link href="\style.css" type="text/css" rel="stylesheet">
 	
       <!--google API's / fonts-->
       <link href="https://fonts.googleapis.com/css?family=Raleway" type="text/css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
         <!--Copyrigt and email address-->
         <div class="footer">
-            <p class="footer">© Jonas Reimer Christensen 2017 <br /> Mail: jonasreimerchristensen@gmail.com</p>
+            <p class="footer">Â© Jonas Reimer Christensen 2017 <br /> Mail: jonasreimerchristensen@gmail.com</p>
 
         </div>
 
