--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Jonas Reimer Christensen</title>
 	
       <!--Stylesheet for website-->
-      <link href="\style.css" type="text/css" rel="stylesheet">
+      <link href="/style.css" type="text/css" rel="stylesheet">
 	
       <!--google API's / fonts-->
       <link href="https://fonts.googleapis.com/css?family=Raleway" type="text/css" rel="stylesheet">
